# thesis-binus

./: .gitattributes  .gitignore  00-indobart copy.ipynb  00-indobart-00.ipynb  00-indobart.ipynb  000-baseline.ipynb  01-indobart-bertopic-00.ipynb  01-indobart-bertopic-01.ipynb  01-indobart-bertopic-02.ipynb  01-indobart-bertopic.ipynb  README.md  bertopic-indobart.ipynb  indobart-dp.ipynb  indobart.ipynb  paperspace-ubuntu2204.sh  pyproject.toml  setup.sh
benc_result/00-indobart/: summarization_result.csv  summarization_result.json
benc_result/01-indobart-bertopic/: topic_info.xlsx
repo/SEACrowd/indosum/: README.md  indosum.py  requirements.txt
repo/indobenchmark/toolkit/: README.MD  tokenization_indonlg.py
results/00-bertopic-indobart/: topic_document_info.csv  topic_info.csv
results/00-bertopic-indobart/01/: eval_results.json  params.json
results/00-bertopic-indobart/02/: eval_results.json  params.json
results/00-bertopic-indobart/03/: eval_results.json  params.json
results/00-bertopic-indobart/04/: eval_results.json  params.json
results/00-bertopic-indobart/05/: eval_results.json  params.json
results/00-indobart-dp/dim_cache/: dim_cache.pkl  dim_cache.xz
results/00-indobart/01/: eval_results.json  params.json
results/00-indobart/02/: eval_results.json  params.json
results/00-indobart/03/: eval_results.json  params.json
results/00-indobart/04/: eval_results.json  params.json
results/00-indobart/05/: eval_results.json  params.json
src/: common.py  datasets.py
src/indobart/: base.py  tokenizer.py
(+87 files in other folders)
