[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "accelerate>=1.0.1",
    "bertopic>=0.16.4",
    "datasets>=3.0.2",
    "evaluate>=0.4.3",
    "indobenchmark-toolkit>=0.1.7",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nltk>=3.9.1",
    "nusacrowd>=0.1.4",
    "rouge-score>=0.1.2",
    "sastrawi>=1.0.1",
    "seacrowd>=0.2.2",
    "sentencepiece>=0.2.0",
    "spacy>=3.8.2",
    "stanza>=1.9.2",
    "tokenizers>=0.20.1",
    "torch>=2.5.0",
    "transformers>=4.45.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
